testsuite/100-basic/112-double-errors.out
Syntax error (./testsuite/100-basic/112-double-errors.q:1): Unable to parse number: 347509238475092837450982734098572930485

Syntax error (./testsuite/100-basic/112-double-errors.q:2): Unrecognized token: Unrecognized character sequence: #€

Syntax error (./testsuite/100-basic/112-double-errors.q:2): Unrecognized token: €