testsuite/100-basic/112-double-errors.q
347509238475092837450982734098572930485
#€